--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Arthur Bauville
 description: A blog about data science and programming experiments
 github_username: abauville
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "data_science_blog"
+github_repo: "blog"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
@@ -34,7 +34,7 @@ url: "https://abauville.github.io" # the base hostname & protocol for your site,
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/data_science_blog" # the subpath of your site, e.g. "/blog".
+baseurl: "/blog" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
